Add missing / to end version tag in Maven instruction (#746)
PR: #746

--- a/docs/project-page.adoc
+++ b/docs/project-page.adoc
@@ -24,7 +24,7 @@ Maven:
 <dependency>
 	<groupId>org.junit-pioneer</groupId>
 	<artifactId>junit-pioneer</artifactId>
-	<version><!-- ... --><version>
+	<version><!-- ... --></version>
 	<scope>test</scope>
 </dependency>
 ----
