Add simple aggregator (#745 / #744)
Add argument aggregator for simple use-cases.

Closes: #745
PR: #744

--- a/docs/disable-parameterized-tests.adoc
+++ b/docs/disable-parameterized-tests.adoc
@@ -44,7 +44,7 @@ The reason is that it's not clear from reading the annotation whether it's *and*
 == DisableIfArgument
 
 This extension can be used to selectively disable parameterized tests based on their arguments (converted with `toString()`).
-The extension comes with three annotations, covering different use-cases:
+The extension comes with three annotations, covering different use cases:
 
 - `@DisableIfAnyArgument`, non-repeatable
 - `@DisableIfAllArguments`, non-repeatable
