--- a/CODE_OF_CONDUCT.adoc
+++ b/CODE_OF_CONDUCT.adoc
@@ -1,6 +1,6 @@
-# Contributor Covenant Code of Conduct
+= Contributor Covenant Code of Conduct
 
-## Our Pledge
+== Our Pledge
 
 We as members, contributors, and leaders pledge to make participation in our
 community a harassment-free experience for everyone, regardless of age, body
@@ -12,7 +12,7 @@ identity and orientation.
 We pledge to act and interact in ways that contribute to an open, welcoming,
 diverse, inclusive, and healthy community.
 
-## Our Standards
+== Our Standards
 
 Examples of behavior that contributes to a positive environment for our
 community include:
@@ -36,7 +36,7 @@ Examples of unacceptable behavior include:
 * Other conduct which could reasonably be considered inappropriate in a
   professional setting
 
-## Enforcement Responsibilities
+== Enforcement Responsibilities
 
 Community leaders are responsible for clarifying and enforcing our standards of
 acceptable behavior and will take appropriate and fair corrective action in
@@ -48,7 +48,7 @@ comments, commits, code, wiki edits, issues, and other contributions that are
 not aligned to this Code of Conduct, and will communicate reasons for moderation
 decisions when appropriate.
 
-## Scope
+== Scope
 
 This Code of Conduct applies within all community spaces (this includes but is
 not limited to the project's presence on GitHub and the nipafx Discord server),
@@ -60,24 +60,24 @@ appointed representative at an online or offline event.
 Stark violations outside of immediate community spaces (for example on Twitter,
 even if not directed at community members) are also in scope of this Code of Conduct.
 
-## Enforcement
+== Enforcement
 
 Instances of abusive, harassing, or otherwise unacceptable behavior may be
 reported to Nicolai Parlog ([contact options](https://nipafx.dev/contact))
 or the other maintainers (via Discord DMs). All complaints will be reviewed and
 investigated fairly and as promptly as circumstances allow (as explained in
-[the contribution guide](CONTRIBUTING.md#pioneer-maintainers), there's no
+[the contribution guide](CONTRIBUTING.adoc#pioneer-maintainers), there's no
 expectation of availability towards maintainers).
 
 All community leaders are obligated to respect the privacy and security of the
 reporter of any incident.
 
-## Enforcement Guidelines
+== Enforcement Guidelines
 
 Community leaders will follow these Community Impact Guidelines in determining
 the consequences for any action they deem in violation of this Code of Conduct:
 
-### 1. Correction
+=== 1. Correction
 
 **Community Impact**: Use of inappropriate language or other behavior deemed
 unprofessional or unwelcome in the community.
@@ -86,7 +86,7 @@ unprofessional or unwelcome in the community.
 providing clarity around the nature of the violation and an explanation of why
 the behavior was inappropriate. A public apology may be requested.
 
-### 2. Warning
+=== 2. Warning
 
 **Community Impact**: A violation through a single incident or series of
 actions.
@@ -98,7 +98,7 @@ includes avoiding interactions in community spaces as well as external channels
 like social media. Violating these terms may lead to a temporary or permanent
 ban.
 
-### 3. Temporary Ban
+=== 3. Temporary Ban
 
 **Community Impact**: A serious violation of community standards, including
 sustained inappropriate behavior.
@@ -109,7 +109,7 @@ private interaction with the people involved, including unsolicited interaction
 with those enforcing the Code of Conduct, is allowed during this period.
 Violating these terms may lead to a permanent ban.
 
-### 4. Permanent Ban
+=== 4. Permanent Ban
 
 **Community Impact**: Demonstrating a pattern of violation of community
 standards, including sustained inappropriate behavior, harassment of an
@@ -118,21 +118,15 @@ individual, or aggression toward or disparagement of classes of individuals.
 **Consequence**: A permanent ban from any sort of public interaction within the
 community.
 
-## Attribution
+== Attribution
 
-This Code of Conduct is adapted from the [Contributor Covenant][homepage],
+This Code of Conduct is adapted from the Contributor Covenantfootnote:[https://www.contributor-covenant.org],
 version 2.1, available at
-[https://www.contributor-covenant.org/version/2/1/code_of_conduct.html][v2.1].
+https://www.contributor-covenant.org/version/2/1/code_of_conduct.html footnote:[https://www.contributor-covenant.org/version/2/1/code_of_conduct.html].
 
 Community Impact Guidelines were inspired by
-[Mozilla's code of conduct enforcement ladder][Mozilla CoC].
+Mozilla's code of conduct enforcement ladderfootnote:[https://github.com/mozilla/diversity].
 
 For answers to common questions about this code of conduct, see the FAQ at
-[https://www.contributor-covenant.org/faq][FAQ]. Translations are available at
-[https://www.contributor-covenant.org/translations][translations].
-
-[homepage]: https://www.contributor-covenant.org
-[v2.1]: https://www.contributor-covenant.org/version/2/1/code_of_conduct.html
-[Mozilla CoC]: https://github.com/mozilla/diversity
-[FAQ]: https://www.contributor-covenant.org/faq
-[translations]: https://www.contributor-covenant.org/translations
+https://www.contributor-covenant.org/faq footnote:[https://www.contributor-covenant.org/faq]. Translations are available at
+https://www.contributor-covenant.org/translations footnote:[https://www.contributor-covenant.org/translations].
